--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# tuix = {path = "../tuix"}
-tuix = { git = "https://github.com/geom3trik/tuix", branch = "experiment" }
+tuix = { git = "https://github.com/geom3trik/tuix", branch = "reactive" }
 femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master" }
 rand = "*"
